# ScooterProtocol

./: .gitignore  CMakeLists.txt  README.md
src/: NinebotMessageDefinitions.cpp  NinebotMessageDefinitions.hpp  NinebotMessageIntercept.cpp  NinebotMessageIntercept.hpp  NinebotMessageInterface.cpp  NinebotMessageInterface.hpp  NinebotMessageUtils.cpp  NinebotMessageUtils.hpp  config.h
